--- a/slides/templates/regular/index.html.j2
+++ b/slides/templates/regular/index.html.j2
@@ -51,7 +51,6 @@
 <meta
   name="keywords"
   content="technology, workshop, data visualization, Python, data science, slides" />
-<link rel="manifest" href="/favicon/site.webmanifest" />
 <meta
   property="og:url"
   content="https://stefaniemolin.com/{{repo_name}}/" />
@@ -75,7 +74,32 @@
 <meta property="og:image:height" content="1599" />
 
 <title>{{title}} {{nb_title}} slides | Stefanie Molin</title>
+<link rel="manifest" href="/favicon/site.webmanifest" />
 <link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico">
+<link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="/favicon/apple-touch-icon.png" />
+<link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="/favicon/favicon-32x32.png" />
+<link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="/favicon/favicon-16x16.png" />
+<link
+    rel="icon"
+    type="image/png"
+    sizes="192x192"
+    href="/favicon/android-chrome-192x192.png" />
+<link
+    rel="icon"
+    type="image/png"
+    sizes="512x512"
+    href="/favicon/android-chrome-512x512.png" />
 
 {%- block html_head_js -%}
 {%- block html_head_js_jquery -%}
