--- a/slides/templates/regular/index.html.j2
+++ b/slides/templates/regular/index.html.j2
@@ -222,6 +222,11 @@ a.anchor-link {
 <div class="footer" style="padding: 4px; font-size: 22px;">
     {{title}} &ndash; Stefanie Molin
     <div style="float: right; margin-top: -18px;">
+        <a href="https://stefaniemolin.com/say-thanks/"
+          style="z-index: 1;" target="_blank">
+          <img alt="Ways to show appreciation for this content."
+                style="max-width: 100%; margin: 20px 0 0 0;" src="https://img.shields.io/badge/liked_this%3F-say_thanks-gray?logoColor=yellow&color=blue">
+        </a>
         <a href="https://codespaces.new/stefmolin/{{repo_name}}"
             style="z-index: 1;" target="_blank" rel="noopener noreferrer"
         >
