Add license to slides

--- a/slides/templates/regular/index.html.j2
+++ b/slides/templates/regular/index.html.j2
@@ -237,6 +237,9 @@ a.anchor-link {
         <a href="https://github.com/stefmolin/{{repo_name}}" style="z-index: 1;" target="_blank" rel="noopener noreferrer">
             <img alt="View repo on GitHub" src="https://img.shields.io/badge/view-repo-orange?logo=github" style="max-width: 100%; margin: 20px 0 0 0;">
         </a>
+        <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/" style="z-index: 1;" target="_blank" rel="noopener noreferrer">
+            <img alt="CC BY-NC-SA 4.0" src="https://img.shields.io/badge/License-CC%20BY--NC--SA%204.0-lightgrey.svg" style="max-width: 100%; margin: 20px 0 0 0;">
+        </a>
     </div>
     <!-- here's an alternate clock location under title
         <div class="clock" style="margin-right: 5px; position: absolute; top: 40px;"></div>
