--- a/slides/templates/regular/index.html.j2
+++ b/slides/templates/regular/index.html.j2
@@ -74,6 +74,10 @@
 <meta property="og:image:height" content="1599" />
 
 <title>{{title}} {{nb_title}} slides | Stefanie Molin</title>
+<link
+  rel="canonical"
+  href="https://stefaniemolin.com/{{repo_name}}/"
+/>
 <link rel="manifest" href="/favicon/site.webmanifest" />
 <link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico">
 <link
